# rss-rs

./: Cargo.toml  README.md
src/: app.rs  channel.rs  main.rs  tui.rs  ui.rs  update.rs
src/lib/: app.rs  args.rs  channel.rs  consts.rs  mod.rs  tui.rs  ui.rs  update.rs
