[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
cli-clipboard = "0.4.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
html-escape = "0.2.13"
ratatui = "0.26.1"
regex = { version = "1.10.3" }
reqwest = "0.11.24"
rss = "2.0.7"
serde_json = "*"
tokio = { version = "1.36.0", features = ["full"] }
url-escape = "0.1.1"
